@@ -15,7 +15,7 @@ module DatabaseCleaner
       :cleaning,
     ] => :cleaners
 
-    attr_accessor :allow_remote_database_url, :allow_production, :url_allowlist
+    attr_accessor :allow_remote_database_url, :allow_non_test_env, :url_allowlist
 
     alias :url_whitelist :url_allowlist
     alias :url_whitelist= :url_allowlist=
