@@ -1,5 +1,8 @@
 == Development (unreleased)
 
+=== Changes
+  * Safeguard against running in non-test environment
+
 == 2.0.2 2023-03-10
 
 == Bugfixes
